--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,4 +2,11 @@ FROM python:3.7
 
 ENV PYTHONUNBUFFERED 1
 
-*TBW*
+# *TBW*
+COPY . /app
+WORKDIR /app
+
+RUN pip install -r requirements.txt
+
+ENTRYPOINT ["python"]
+CMD ["app.py"]
