--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,12 +1,8 @@
 FROM python:3.7
 
 ENV PYTHONUNBUFFERED 1
+WORKDIR /opt/api
 
-# *TBW*
-COPY . /app
-WORKDIR /app
-
-RUN pip install -r requirements.txt
-
-ENTRYPOINT ["python"]
-CMD ["app.py"]
+COPY ./requirements.txt ./
+RUN pip install --upgrade pip
+RUN pip install -r ./requirements.txt
